@@ -4,9 +4,11 @@ AUX tpserver.conf 1001 RMD160 faf1d5eb7eaa83e5a30e7b4d50165149588ef35a SHA1 4b41
 DIST tpserver-cpp-0.4.1.tar.gz 800432 RMD160 fc3516f1c33aada2a40cddc8c2ad7ee6d85d1955 SHA1 ad21a3d4cb8cba5d84d8a32ad65da338047561c1 SHA256 71e10f6e660a6ba10a2d47314893001f416792b72d78be30922a7c2dde1a8133
 DIST tpserver-cpp-0.5.1.tar.gz 910924 RMD160 199f2aba0089383ca86dc0f5f5a9034cd565c012 SHA1 bff34c02d8ef685a06d906a792655ce182bc5a24 SHA256 5542a7445a2f8cb7bc0fd37c3c664fb5f93aadabdf1befbdc81d3df2b3f54ff4
 DIST tpserver-cpp-0.6.0.tar.gz 1022099 RMD160 ddd722b9435b22c695c75b20e522152ce8be087f SHA1 3b3db172fb2e51580f7722fc06a8bb2117a5a5e0 SHA256 32ced68d0e447f12729c7580f8a198f5692882fecdc021c9b6dd685a99fe9414
+DIST tpserver-cpp-0.6.1.tar.gz 1038764 RMD160 1a14dce76e0acd57a26ddadf56a536aebc9a8450 SHA1 5e91bdc608e7af76e7475365111f7b4fb1edb5d1 SHA256 6e762fbae9b4baaccda2b840f778ce7235db25409d1a1d419ce5c8ae71da5b45
 EBUILD tpserver-cpp-0.4.1.ebuild 1003 RMD160 f3a6a403f33dbf21d6dac7d6edd120ff09f4143f SHA1 b0b86014216039bb1c3f999f77ee8b242877f2e0 SHA256 183c06df19606b16e8f66aa2dbb7bfc79bd0a23a13933eaba5456d6661954c5a
 EBUILD tpserver-cpp-0.5.1.ebuild 1099 RMD160 b246c07348859143752ef782f7c727bc1e46198f SHA1 9b4f504fe693977bf2c39d2804f4502e03afcbae SHA256 d1465de02f3e91f7fea210fcc89ed34569419082f0d8ee817fe77874c4ab073d
 EBUILD tpserver-cpp-0.6.0.ebuild 1275 RMD160 0d6df5a362c629c90fd5537ef7a5ca6ad9c79ede SHA1 30fc82c28820f06b553ab54e6a63af14448521e6 SHA256 68fd9a95460a1cb523fd0a735fc469575bd3751c7cefcc868f8c6112b4ba3d50
+EBUILD tpserver-cpp-0.6.1.ebuild 1275 RMD160 0d6df5a362c629c90fd5537ef7a5ca6ad9c79ede SHA1 30fc82c28820f06b553ab54e6a63af14448521e6 SHA256 68fd9a95460a1cb523fd0a735fc469575bd3751c7cefcc868f8c6112b4ba3d50
 EBUILD tpserver-cpp-9999.ebuild 1318 RMD160 959b51c1c75d47a2e70a28efa2c6558650292a9d SHA1 c1b1fffac6603de09dd4f3ba277a582559d1cfc1 SHA256 5fb5db70fbbec62422a64e806b9743cb6ba926ff025cbff394818214fdd76fe2
-MISC ChangeLog 1233 RMD160 ca96938a45629bbaaed4d8adb6e0e12ae8de04c4 SHA1 f186a26a5985b5f8e8114c3ef31dd3ee4d74a516 SHA256 d5231126643fd4fa098adef950c7f90a3ee3ad842ede3bfa1d52606776d8f870
+MISC ChangeLog 1361 RMD160 3a03da90d42de85c237d5f5f7425c2f554d33f81 SHA1 c5520182d479f4d79c47b7d51a0f9d4f2516c1b2 SHA256 27fb9993a32d260308514cb5359a49fbd759cc07fbbb68ef6f6d26ad48abf2b6
 MISC metadata.xml 332 RMD160 28be196bd790f6bcfcecc629fbf4ce97b3364a24 SHA1 dfca2d8c53772720037e0f1cc64f0e9867cfcc0a SHA256 0ada152869a9d95832438d11fd527b8e2016092b0908721da628ee2d99841357
